Update on Overleaf.

--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -83,7 +83,9 @@ As a response to several reviewers, we made the following general changes:
 
 \begin{itemize}
 	\item Several comments, from the first and third referees especially, suggested that we clarify and explicit the description of our two models: we clarified the descriptions and justified our choices more thoroughly, and also provided pseudo-codes for each model in the Appendix so as to help the reader navigate the implementation chosen compared to other articles. Finally, we mentioned more clearly in the text the fact that source codes are openly available in a github repository.
-    \item There was a conflict between the comments of the third referee and the other referees about the comparison of phase diagram. In order to conciliate as much as possible the different parties, we added some developments and comments about how we defined, built, justified and compared phase diagrams in the paper.
+    \item In order to conciliate as much as possible the different points of view about the comparison of phase diagram, we added some developments and comments about how we defined, built, justified and compared phase diagrams in the paper.
+    %\comment[FL]{je ne sais pas si dire "conflict" sera productif?, de même que de parler de "parties"? ci-dessous en commentaires la réponse précédente, j'ai juste reformulé}[(JR) ok nickel]
+    % \item There was a conflict between the comments of the third referee and the other referees about the comparison of phase diagram. In order to conciliate as much as possible the different parties, we added some developments and comments about how we defined, built, justified and compared phase diagrams in the paper
     \end{itemize}
 
 \medskip
@@ -105,6 +107,7 @@ Concerning specifically the comments made by the first referee:
    
    % I believe it would be better to begin with an illustrative example on how two or three initial patterns influence the model results and then use the suggested method for a more extensive analysis
    \item Concerning basic illustration of the influence of initial patterns, we think that it is not possible with single runs to show a significant effect other than the direct effect of space on the localization of agents for example. It is indeed the point of our method that such tests must be done in a systematic way rather than ``eyeball validations''.
+   %\comment[FL]{je ne suis pas sûr d'être d'accord avec cette réponse : si on est pas en mesure de fournir des illustrations frappantes du truc d'entrée de jeu, c'est dommage. Pas sûr que se cacher derrière les grilles complètes soit le bon argument.}[(JR) du coup on est ok que ca compliquerait trop l'autre Schelling encore et qu'on le met pas ?]
    %\comment[JR]{Possibility to find configuration with an ``eyeball'' difference ? i'm not sure of that..}[(CC)peut-être en prenant des cas extrêmes sur Sugarscape?][(JR) je regarde... $\rightarrow$ bof, on voit rien a part que les agents se repartissent differement mais qui est une consequence directe d'ajouter l'espace, en en comparant les valeurs finales des ginis, ce qu'on fait plus bas plus rigoureusement. je suggère poliment que sa suggestion est idiote.]
 	
 	% 2. It is very important to describe the models. This is especially relevant for the Schelling model, which has many variants; each has different dependencies on the initial pattern. In my opinion, the NetLogo implementation is not the best choice because the model does not reach a state of segregation when agents are highly intolerant.
@@ -120,27 +123,29 @@ Concerning specifically the comments made by the first referee:
 	% 4. Consider replacing “meta parameters” with something like “generator parameters” or “initial pattern parameters.”
 	%In order to clarify the concept of ``meta-parameter'' that we prefer to keep, we now propose a short definition after the first use of the term (section Methods): "In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters meta-parameters to distinguish from the standard parameters of the models and highlight their higher position in the simulation process".
 	\item We agree that the term of meta-parameters may have been confusing, and following the suggestion we replaced it with ``generator parameters''.
-     \comment[JR]{TB la def Marion ; là on peut choisir de virer en effet le terme, ou dire que les 3 sont interchangeable mais que "meta-" est plus pratique, qu'en pensez vous ?}
-    \comment[CC]{d'acc.}
-    \comment[MLT]{Du coup, dans nos échanges par mails on disait qu'on était ok pour changer, mais finalement cette solution vous convient? Je comprends pourquoi il/elle a tiqué sur le terme, mais c'est pas non plus hors de propos vu l'application qu'on en fait... bref, je suis partagée!}[(JR) moi ca me va de virer le meta]
+     %\comment[JR]{TB la def Marion ; là on peut choisir de virer en effet le terme, ou dire que les 3 sont interchangeable mais que "meta-" est plus pratique, qu'en pensez vous ?}
+    %\comment[CC]{d'acc.}
+    %\comment[MLT]{Du coup, dans nos échanges par mails on disait qu'on était ok pour changer, mais finalement cette solution vous convient? Je comprends pourquoi il/elle a tiqué sur le terme, mais c'est pas non plus hors de propos vu l'application qu'on en fait... bref, je suis partagée!}[(JR) moi ca me va de virer le meta]\comment[FL]{moi aussi ca me va de virer méta}
 
 	
 	% 5. Line 228: Please explain why the median was chosen. Especially given that you use an L2 norm and variances in the index
 	\item \comment[JR]{je pensais qu'on prenait la moyenne ? je verifie... ligne 175 on écrit la médiane en effet}
 	\comment[CC]{ça doit être moi parce que je pensais qu'on prenait effectivement la médiane, qui est plus robuste aux extrêmes, mais si c'est la moyenne et que ça reste proche entre différentes réplications why not.}[(JR) il me semble que les distribs sont assez centrées et que ca revient quasiment au même ; par contre Clem si tu as pris median pour les stats et moi mean pour les plots c'est pas fou ; tu as encore le code des analyses stats ? (c'est sur le git ?)]
 	\comment[JR]{c'est la merde, on prend certaines fois la mediane et certaines fois la moyenne...}
+    \comment[FL]{certes c'est pas fou mais ca peut se défendre en disant que la médiane sert pour communiquer de façon accessible, sur une dimension pour laquelle c'était pertinent, mais que de façon générique on a préféré travailler sur la loi de Gauss car tout le monde à en tête ces indicateurs moyenne / ecartype c'est plus "passe partout"? }
 	
 	
 	% 6. Line 232: comparing phase diagrams is related to the topic of comparing patterns. It would make sense to mention the methods that are usually used to compare patterns
 	\item \comment[JR]{biblio a rajouter}
 	
 	% 7. Line 238: Please explain why this particular index was chosen and discuss its properties. Connect the discussion to other indices like L1, and Linf norms, etc. Would we get qualitatively different results from different indices? 
-	\item \comment[JR]{on avait teste avec le Monge ca donnait a peut pres pareil ; donc les normes alpha surement encore plus. je regarde.}
+	\item \comment[JR]{on avait teste avec le Monge ca donnait a peut pres pareil ; donc les normes alpha surement encore plus. je regarde.}\comment[FL]{je pense qu'on peut assumer le côté exploratoire de l'approche : on a deux modèles déjà et on présente un framework : on peut ouvrir en disant qu'ensuite en fonction des indicateurs on pourrait avoir des agrégateurs mathématiques ad hoc, parfois L2, L1, Linf, mais que là pour faire "passe partout" on présente L2 que tout le monde connait? }
 	
 	% 8. Regarding the spatial generator: the authors should explain why this generator is relevant to these two models? 
-	\item This spatial generator is relevant to both model as it produces density grids at a ``metropolitan scale'' (see detailed discussion added in Appendix and the original paper from which we used the generator), which is the scale at which both model were initially intended to be. We made this aspect more explicit. 
+	\item This spatial generator is relevant to both model as it produces density grids at a ``metropolitan scale'' (see detailed discussion added in Appendix and the original paper from which we used the generator), which is the scale at which both model were initially intended to be. We made this aspect more explicit. \comment[FL]{c'est léger comme justification : je dirais que ton générateur est crédible il produit des indicateurs dont l'espace de variation est crédible quand on le confronte aux observations empiriques : il faut que tu parles je pense de la ref où tu as les deux nuages de points superposés. Sinon cela fait un peu "cela marche car cela marche"}
 	
-	\item In the case of Schelling, this is the scale at which most empirical segregation indices are computed. In the case of Sugarscape, it corresponds to the whole city if the model is a metaphor for city resources (Batty....), or to a generic landscape where a resource is grown otherwise. In both cases, our point is that there exist many different patterns of density distribution in resource location and urban density, and that not acknowledging this diversity leads to potentially false results. Furthermore, in urban models, we argue that the hypothesis of isotropic density is potentially the most harmful one (e.g. the least realistic, although this is the case of most Schelling models).
+	\item In the case of Schelling, this is the scale at which most empirical segregation indices are computed. In the case of Sugarscape, it corresponds to the whole city if the model is a metaphor for city resources (Batty, 2005), or to a generic landscape where a resource is grown otherwise. In both cases, our point is that there exist many different patterns of density distribution in resource location and urban density, and that not acknowledging this diversity leads to potentially false results. Furthermore, in urban models, we argue that the hypothesis of isotropic density is potentially the most common simplification of the heterogeneity of space, with consequences on the model outputs often not evaluated.
+    %(e.g. the least realistic, although this is the case of most Schelling models).\comment[FL]{reformuler en enlevant harmful : simplement "is potentially the most common simplification of the heterogeneity of space, with consequences on the model outputs often not evaluated}
 	%\comment[CC]{Ref du papier de batty à ajouter (je ne l'ai pas trouvée}[(c'est le Batty, 2005)]
 	
 	
@@ -156,7 +161,7 @@ Concerning specifically the comments made by the first referee:
 	% 11. Line 297: I am not sure why empirical density destitutions of cities are important in the context of this study. 
 	%\item cf infra. 
 	\item Density distributions of empirical cities are important because we want to test models with realistic ranges of initial patterns of density distribution. Therefore we cannot limit ourselves to a single 2-peak mountain in the classical Sugarscape model and an isotropic square city in Schelling. We chose to use actual distribution of European cities to constraint our density generation.
-%\comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]
+%\comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]\comment[FL]{top}
 		
 	
 	% 12. Line 641: NetLogo supports grids, continuous space, and GIS elements. It does not restrict the user in any way.
@@ -193,13 +198,14 @@ Concerning the comments made by the second referee:
 	
 	% Page 2 line 98: “However, this step is rarely explicit and authors tend to generalize the conclusion of the model from a single, spatial case study”. I do not understand the first part of the this statement. The steps taken are often very explicit. Due to the amount of time it takes to correctly represent all spatial data, including population densities and the variation of other population variables over space, many authors indeed restrict themselves to a single case study due to the time intensity of this task. Many agent-based models are also not valid for other areas.
 	\item \comment[JR]{idem la on parle pas exactement du meme type de modeles, mais son exemple prouve notre propos : le modele tourne sur une situation unique, et on teste pas l'effet de l'espace.}
-    \comment[MLT]{Bon, c'est clairement quelqu'un qui fait de l'appliqué et qui veut pas entendre notre argument ;) On peut aller dans son sens et modifier notre propos en écrivant : "However, this step is rarely explicit and authors are therefore not able to generalize the conclusion of the model to other spatial entities."}
+    \comment[MLT]{Bon, c'est clairement quelqu'un qui fait de l'appliqué et qui veut pas entendre notre argument ;) On peut aller dans son sens et modifier notre propos en écrivant : "However, this step is rarely explicit and authors are therefore not able to generalize the conclusion of the model to other spatial entities."}\comment[FL]{cette formulation me va, peut être "spatial context" plutôt que "spatial entities", qui serait encore plus général?}
 	
 	% The authors do not differentiate between data driven empirical models versus theory-driven models. I think a clear differentiation between the two groups and the positioning of the two case studies in the second group would make the paper more balanced.
 	\item Concerning the remarks on synthetic population generation and the different types of models, we clearly stated our positioning regarding models built from theory, for which the proposed sensitivity analysis workflow is more suited and that our two case studies illustrate.\comment[JR]{oui du coup en disant ça ça repond à ses deux points précédents}\comment[JR]{positionement a plus souligner dans le papier}
 	
 	% In section 1.3 (Previous considerations on the effects of the spatial configuration in simulation models) authors provide a lot of evidence on previous work on the impact of initial spatial conditions on the output of models. This is contrary to the statement in the abstract that initial conditions are often taken for granted.
-	\item Indeed, we have tried to review articles where some kind of sensitivity to initial spatial conditions are tackled. But first, the references cited in this section are few compared to the mass of geosimulation articles published without any mention of dependence of output on initial spatial condition. Second, the references cited mostly provide some hints of impact of initial spatial conditions on the output of models (due to the accuracy of data, shape of boundaries and spatial heterogeneity) but none provide a systematic inquiry into the impact of systematically defined spatial input on the model output in the way we try to provide later on in the paper. We have tried to argue this point at the end of the section.
+	\item Indeed, we have tried to review articles where some kind of sensitivity to initial spatial conditions are tackled. \comment[FL]{ci dessous en commentaire l'ancienne version, j'ai essayé d'arrondir la formulation ca fait agacé genre "bon j'ai raison : d'abord..., ensuite..."}. However we would like to emphasize that the references cited in this section are few compared to the mass of geosimulation articles published with hardly any mention of dependence of output on initial spatial condition. Moreover, even if such sensitivity is tester, it mostly provide some hints of impact of initial spatial conditions on the output of models (due to the accuracy of data, shape of boundaries and spatial heterogeneity) but to the best of our knowledge no article provide a systematic inquiry into the impact of systematically defined spatial input on the model output in the way we try to provide later on in the paper. We have tried to argue this point at the end of the section.
+    %\item Indeed, we have tried to review articles where some kind of sensitivity to initial spatial conditions are tackled. But first\comment[FL]{arrondir la formulation ca fait agacé genre "bon j'ai raison : d'abord..., ensuite..."}, the references cited in this section are few compared to the mass of geosimulation articles published without any mention of dependence of output on initial spatial condition. Second, the references cited mostly provide some hints of impact of initial spatial conditions on the output of models (due to the accuracy of data, shape of boundaries and spatial heterogeneity) but none provide a systematic inquiry into the impact of systematically defined spatial input on the model output in the way we try to provide later on in the paper. We have tried to argue this point at the end of the section.
     %\comment[CC]{argumentaire à ajouter dans le papier}[(cc) done]
 	
 	% The most interesting part of the research to me, is not the way the density layers are generated but the use of the phase diagrams, defined as a vector of final aggregated model outputs. As these are vectors, they are not so different from time series and many techniques exist to compare vectors in this domain. I wonder if the Euclidean distance is the best measure to determine the difference between the phase vectors of different spatial inputs.
@@ -208,10 +214,10 @@ Concerning the comments made by the second referee:
 	%\comment[JR]{analyse à ajouter}
 	
 	% Last paragraph of page 5, you do not state explicitly if genetic algorithms were use within the OpenMOLE platform.
-	\item The functionalities of OpenMOLE we used were detailed; we did not use genetic algorithms but sampling methods and high performance computing environments.
+	\item The functionalities of OpenMOLE we used were detailed in the article; we did not use genetic algorithms but sampling methods and high performance computing environments.
 	
 	% In section 3.1, page 8, line 404-405 the authors mention that the distance of the phase diagrams was measured with respect to the reference phase diagram computed on the default initial spatial conditions. Actually this came as a surprise to me. I had the impression that all phase diagrams would be evaluated against all other diagrams. Perhaps this should be explained earlier in the paper.
-	\item \comment[JR]{ce qu'il suggère c'est un indice intégré sur l'ensemble des phases diagramme, donc un ``meta-meta-indice'' en quelque sorte, nous on reste à un niveau de meta seulement car on regarde juste pour chaque s'il bouge par rapport à un point de reference. En termes thematique c'est plus coherent pour nous, lui doit avoir en tete des indices de sensibilite globaux type Saltelli. $\rightarrow$ a voir comment justifier ca bien}{(JR) inclure en mise en contexte ce lien avec les Saltelli et indexes globaux}
+	\item \comment[JR]{ce qu'il suggère c'est un indice intégré sur l'ensemble des phases diagramme, donc un ``meta-meta-indice'' en quelque sorte, nous on reste à un niveau de meta seulement car on regarde juste pour chaque s'il bouge par rapport à un point de reference. En termes thematique c'est plus coherent pour nous, lui doit avoir en tete des indices de sensibilite globaux type Saltelli. $\rightarrow$ a voir comment justifier ca bien}{(JR) inclure en mise en contexte ce lien avec les Saltelli et indexes globaux}\comment[FL]{oui je trouve qu'on a le droit de rester limiter à cela c'est déjà pas mal!}
 	
 	% Figure 4 and 5: I find it confusing that the green color indicates higher distance values and the red color indicates lower values. I think this should be reversed.
     
