--- a/paper.tex
+++ b/paper.tex
@@ -62,22 +62,22 @@
 
 \title{Space Matters: extending sensitivity analysis to initial spatial conditions in geosimulation models}
 
-%\author[a,b]{Juste Raimbault\corref{cor1}}
-%\author[c,d]{Cl{\' e}mentine Cottineau}
-%\author[e]{Marion Le Texier}
-%\author[f]{Florent Le N{\' e}chet}
-%\author[a]{Romain Reuillon}
-\author{}
+\author[a,b]{Juste Raimbault\corref{cor1}}
+\author[c,d]{Cl{\' e}mentine Cottineau}
+\author[e]{Marion Le Texier}
+\author[f]{Florent Le N{\' e}chet}
+\author[a]{Romain Reuillon}
+%\author{}
 
-%\address[a]{UPS CNRS 3611 ISC-PIF, Paris, France}
-%\address[b]{UMR CNRS 8504 G{\'e}ographie-cit{\'e}s, Paris, France}
-%\address[c]{Centre for Advanced Spatial Analysis, University College London, UK}
-%\address[d]{UMR CNRS 8097 Centre Maurice Halbwachs, Paris, France}
-%\address[e]{UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France}
-%\address[f]{Universit{\'e} Paris-Est, Laboratoire Ville Mobilité Transport, Marne-la-Vallée, France}
+\address[a]{UPS CNRS 3611 ISC-PIF, Paris, France}
+\address[b]{UMR CNRS 8504 G{\'e}ographie-cit{\'e}s, Paris, France}
+\address[c]{Centre for Advanced Spatial Analysis, University College London, UK}
+\address[d]{UMR CNRS 8097 Centre Maurice Halbwachs, Paris, France}
+\address[e]{UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France}
+\address[f]{Universit{\'e} Paris-Est, Laboratoire Ville Mobilité Transport, Marne-la-Vallée, France}
 
 
-%\cortext[cor1]{Corresponding author: juste.raimbault@polytechnique.edu}
+\cortext[cor1]{Corresponding author: juste.raimbault@polytechnique.edu}
 
 
 
